--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,11 @@ dependencies:
   cloud_firestore: ^4.8.2
   cupertino_icons: ^1.0.2
   dotted_border: ^2.0.0+3
-  file_picker: ^5.3.2
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_storage: ^11.2.4
+  file_picker: ^4.5.1
+  permission_handler: ^10.4.2
   flutter:
     sdk: flutter
   provider: ^6.0.5
