--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,8 +34,9 @@ dependencies:
   firebase_auth: ^4.6.3
   firebase_core: ^2.14.0
   firebase_storage: ^11.2.4
-  file_picker: ^4.5.1
+  file_picker: ^5.3.1
   permission_handler: ^10.4.2
+  image_picker: ^1.0.0
   flutter:
     sdk: flutter
   provider: ^6.0.5
