--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   file_picker: ^5.3.1
   permission_handler: ^10.4.2
   image_picker: ^1.0.0
+  agora_rtc_engine: ^6.2.1
   flutter:
     sdk: flutter
   provider: ^6.0.5
